added artist picture upload
